# bacs_legacy

./: CMakeLists.txt  b2_compiler  b2_compiler.cpp  bacs2.cpp  bacs2.h  bacs2_config.cpp  bacs2_config.h  bacs2_db.cpp  bacs2_db.h  bacs2_def.h  bacs2_helper.cpp  bacs2_legacy.h  bacs2_log.cpp  bacs2_log.h  bacs2_pipes.cpp  bacs2_pipes.h  bacs2_problem.cpp  bacs2_run.cpp  bacs2_run.h  bacs2_submit.cpp  bacs2_tempfiles.cpp  bacs2_tempfiles.h  bacs2_test.cpp  bacs2_util.cpp  bacs2_util.h  checkdef.cpp  clean.c  compile_all  init_env.sh  java_clean.c  java_clean.cpp  java_compile.c  java_compile.cpp  java_run.c  limit_run.cpp  main.cpp  meson.build  py3_compile.py  test_tomoyo  test_tomoyo.c
archlinux/: bacs2  bacs2.conf  run.py
include/bacs/: common.hpp  config.hpp  db.hpp  def.hpp  legacy.hpp  log.hpp  pipes.hpp  run.hpp  tempfiles.hpp  util.hpp
include/bacs/legacy/: common.hpp  config.hpp  db.hpp  def.hpp  log.hpp  run.hpp  tempfiles.hpp  util.hpp
src/lib/: common.cpp  config.cpp  db.cpp  helper.cpp  log.cpp  pipes.cpp  problem.cpp  run.cpp  submit.cpp  tempfiles.cpp  test.cpp  util.cpp
testlib/cpp/01_testlib.googlecode.com/: testlib.h
testlib/pas/01_Lopatin/: testlib.dcu  testlib.ppu
testlib/pas/02_SPb-IFMO/: testlib.pas
testlib/pas/03_sc_resp/: testlib.pas
tomoyo/: domain_policy.conf  exception_policy.conf
